@@ -30,6 +30,9 @@ extern MagickExport MagickBooleanType
   DeleteNodeByValueFromSplayTree(SplayTreeInfo *,const void *),
   DeleteNodeFromSplayTree(SplayTreeInfo *,const void *);
 
+extern MagickExport const void
+  *GetValueFromSplayTree(SplayTreeInfo *,const void *);
+
 extern MagickExport int
   CompareSplayTreeString(const void *,const void *),
   CompareSplayTreeStringInfo(const void *,const void *);
@@ -46,7 +49,6 @@ extern MagickExport unsigned long
 extern MagickExport void
   *GetNextKeyInSplayTree(SplayTreeInfo *),
   *GetNextValueInSplayTree(SplayTreeInfo *),
-  *GetValueFromSplayTree(SplayTreeInfo *,const void *),
   *RemoveNodeByValueFromSplayTree(SplayTreeInfo *,const void *),
   *RemoveNodeFromSplayTree(SplayTreeInfo *,const void *),
   ResetSplayTree(SplayTreeInfo *),
